@@ -31,7 +31,7 @@ plugins {
 }
 
 dependencies {
-    compile project(':core:quasylab.sibilla.core.simulator')
+    compile project(':core:simulator')
     compile project(':examples:populations:quasylab.sibilla.examples.pm.covid')
     compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.8'
 }
@@ -49,7 +49,9 @@ run {
             "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.charts=ALL-UNNAMED"
     ]
-mainClassName = 'quasylab.sibilla.gui.InteractiveSimulation'
+mainClassName = 'it.unicam.quasylab.sibilla.gui.InteractiveSimulation'
 
 }
+
